--- a/index.html
+++ b/index.html
@@ -25,36 +25,44 @@
 		<div id="popup-container">
         	<a class="close btn-close"></a>
 			<div id="popup-window">
-	            <div class="modal-content">				
-		            <figure class="fig-modal-tac">
-		            	<img src="img/img-campanha-modal.jpg" class="img-modal-tac" alt="">
-		            </figure>
-		            <div class="content-modal">
-		            	<div class="newsletter-modal">
-		            		<h2>Entre para a família toque a campainha e ganhe 10% de desconto</h2>
-		            		<p>Cadastre-se para receber ofertas especiais em seu e-mail e ganhe um cupom para a sua primeira compra.</p>
-		            		<form action="" class="form-modal-default">
-		            			<input type="text" placeholder="Digite seu nome" name="" id="" class="input-modal-default" required>
-		            			<input type="email" placeholder="Digite seu e-mail" name="" id="" class="input-modal-default" required>
-		            			<button class="btn-send-modal-form" id="">Cadastrar</button>
-		            			<p class="right-text"><a class="close">Não, obrigado. Eu não quero receber descontos.</a></p>
-		            		</form>
-		            	</div>
-		            	<div class="success-msg">
-		            		<h2>E-mail cadastrado com sucesso!</h2>
-							<p>A partir de agora você vai receber nossas ofertas, promoções e dicas.</p>
-							<p>Acesse seu e-mail para pegar o seu cupom de desconto.</p>
-							<p><a class="close">Continuar navegando no site</a></p>
-		            	</div>		            	
-		            </div>
-	          	</div>
+        <div class="modal-content">				
+          <figure class="fig-modal-tac">
+          	<img src="img/img-campanha-modal.jpg" class="img-modal-tac" alt="">
+          </figure>
+          <div class="content-modal" id="content-modal">
+              <div class="newsletter-modal">
+                <div id="newsForm">
+  		            <!--div class="content-modal" id="content-modal">
+  		            	<div class="newsletter-modal">
+  		            		<h2>Entre para a família toque a campainha e ganhe 10% de desconto</h2>
+  		            		<p>Cadastre-se para receber ofertas especiais em seu e-mail e ganhe um cupom para a sua primeira compra.</p>                    
+    		            		<form action="" class="form-modal-default">
+    		            			<input type="text" placeholder="Digite seu nome" name="" id="" class="input-modal-default" required>
+    		            			<input type="email" placeholder="Digite seu e-mail" name="" id="" class="input-modal-default" required>
+    		            			<button class="btn-send-modal-form" id="">Cadastrar</button>
+    		            			<p class="right-text"><a class="close">Não, obrigado. Eu não quero receber descontos.</a></p>
+    		            		</form>                    
+  		            	</div>
+  		            	<div class="success-msg"><h2>E-mail cadastrado com sucesso!</h2><p>A partir de agora você vai receber nossas ofertas, promoções e dicas.</p><p>Acesse seu e-mail para pegar o seu cupom de desconto.</p><p><a class="close">Continuar navegando no site</a></p></div>
+  		            </div-->
+                </div>
+                <div class="formContainerNewsletter">
+                  <p class="right-text"><a class="close">Não, obrigado. Eu não quero receber descontos.</a></p>
+                </div>
+                <div class="continueLink">
+                  <p><a class="close">Continuar navegando no site</a></p>
+                </div>
+              </div>
+      	  </div>
+        </div>
 			</div>
 		</div>
     </footer>
 
     <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="js/masterdataconnectnewsletter.js"></script>
     <script src="js/jquery.cookie.js"></script>
-    <script src="js/custom.js"></script>
+    <script src="js/modal-cookie-tac.js"></script>
     
   </body>
 </html>
